--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: latentsn
-Title: Latent Shotnoise Risk Field Estimation From Binary Marked Point Patterns
+Title: Latent Shot-noise Risk Field Estimation For Binary Marked Point Patterns
 Authors: 
     Tuomas Rajala <tuomas.rajala@iki.fi>
 Version: 0.1
-Description: MCMC algorithm for estimating a model for a binary-marked point pattern, where marking probability is given by a 
-  shot-noise field with a very specific shape that models the risk from the spreading of root-rot inducing fungus via root-systems of spruces.
-License: MIT + file LICENSE
+Description: The package implements a custom MCMC algorithm for estimating a model for a binary-marked point pattern, where marking probability is given by a 
+  shot-noise field with a very specific shape that models the risk from the spreading of root-rot inducing fungus via root-systems of spruces. 
+License: MIT
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
